# iso-3166-haskell

./: iso3166.cabal
src/Data/Country/: Code.hs  Code2.hs  Code3.hs
src/Data/Country/Code/: CA.hs  CO.hs  US.hs
src/Data/Country/Subdivision/: Category.hs
src/Data/Language/: Code.hs
